--- a/Model/PracticaMaD.tt
+++ b/Model/PracticaMaD.tt
@@ -2,7 +2,7 @@
 <#@ include file="EF6.Utility.CS.ttinclude"#><#@ 
  output extension=".cs"#><#
 
-const string inputFile = @"PracticaMaD.edmx";
+const string inputFile = @"PracticaMaD.Model.edmx";
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
 var ef = new MetadataTools(this);
